[package]
name = "esp32-preemt-experiment"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
esp32-hal = { git = "https://github.com/esp-rs/esp-hal", package = "esp32-hal" }
xtensa-lx-rt = { version = "0.10.0", features = ["esp32"] }
xtensa-lx    = { version = "0.6.0", features = ["esp32"] }
